# assertion-verification

./: AUTHORS  Makefile  Makefile.in  README  config.status  configure  configure.ac  translation
doc/: manual.tex
doc-src/: .manual.tex.swp  manual.aux  manual.dvi  manual.tex  manual.tex~
doc/CVS/: Entries  Repository
examples/: Eg.mlw  autocommit.sh  createAssertion.txt  createTable.txt  delete.txt  insert.txt  update.txt
examples/CVS/: Entries  Repository
examples/delete/CVS/: Entries  Repository
examples/delete/delete-1/: delete  test.mlw
examples/delete/delete-1-1/: createAssertion  delete  test.mlw
examples/delete/delete-2/: createAssertion  delete  test.mlw
examples/insert/CVS/: Entries  Repository
examples/insert/insert-1/: createAssertion  insert
examples/insert/insert-2/: insert
examples/key/CVS/: Entries  Repository
examples/key/foreign-key/: references.txt
examples/key/unique/: unique.txt
examples/sample-Why3ML/: exists-delete.mlw  exists-update.mlw
examples/sample-Why3ML/CVS/: Entries  Repository
examples/sample-assertion/CVS/: Entries  Repository
examples/update/CVS/: Entries  Repository
examples/update/update-1/: createAssertion  test.mlw  update.txt
examples/update/update-1-1/: createAssertion  test.mlw  update
examples/update/update-1-2/: createTable  update
examples/update/update-2/: .createTable.kate-swp  createAssertion  createTable  test-modif.mlw  test.mlw  update
m4/CVS/: Repository
src/: .depend  Makefile  Makefile.am  Makefile.in  assertion.mly  assertionLexer.mll  delete.mly  deleteLexer.mll  global.ml  global.mli  insert.mly  insertLexer.mll  main.ml  tableDef.mly  tableDefLexer.mll  update.mly  updateLexer.mll
src/.deps/CVS/: Entries  Repository
src/CVS/: Entries  Repository
(+44 files in other folders)
